css/index.css
.author {
    color: rgb(44, 62, 80);
}

body {
    padding-top: 70px;
}

h2 {
    border-top: 1px solid rgb(44, 62, 80);
    padding-top: 10px;
}

header {
    margin-bottom: 20px;
}

main {
    font-family: Georgia, Times, serif;
    font-size: 21px;
    line-height: 1.58;
    width: 700px;
}

main > p {
    margin-bottom: 25px;
}

pre code {
    overflow: visible;
    white-space: pre;
    word-wrap: normal;
}

time {
    color: rgb(44, 62, 80);
}

.resume {
    height: 100%;
    left: 0;
    position: fixed;
    top: 0;
    width: 100%;
}

ul.index {
    list-style-type: none;
}

ul.index li {
    border-bottom: 1px solid rgb(44, 62, 80);
    padding: 40px 0px;
}

ul.index main {
    font-size: 18px;
}

ul.index p {
    margin-top: 25px;
}

